# connorcode-old

./: .dockerignore  .firebaserc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  build.sh  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  rust.yml
builder/: Cargo.toml
builder/src/: app.rs  args.rs  main.rs
data/: data.db
data/config/: config.cfg  dont_serve.txt  link.cfg  projects.cfg
data/static/: humans.txt  index.html  index.js  key.asc  robots.txt  stop.html  style.css  style.css.map  style.scss  styleM.css
data/static/IdeaGen/: Payed.js  index.html  index.js  payed.html  style.css  style.css.map  styleM.css
data/static/Main_Assets/: animate.css
data/static/NoseCoin/: index.html  style.css
data/static/Pi/: index.html  index.js
data/static/about/: index.html  index.js
data/static/analytics/: index.scss.map
data/static/api/: index.html
data/static/backgrounds/: about.html  index.css  index.css.map  index.html  index.scss
data/static/christmas/: index.css  index.css.map  index.html  index.js  index.scss  (+1 more)
data/template/: error.html  files.html  index.html  not_found.html  project.html  writing.html
data/writing/: HelloWorld.md  afire-update-0.md  afire.md  test.md
public/: index.js  sitemap.xml  style.css
public/Downloads/: AntiSafeshare.user.js  AntiSafeshare_Beta0-4.user.js  AutoLogin.py  EacloxusStatus.json  GameStatus.json  GameTestStatus.json  Temp.py
public/IdeaGen/: Payed.html  Script.js  index.html  style.css
public/NoseCoin/: style.css
public/backgrounds/: index.html
public/colornamegen/: index.html
public/contact/: index.css  index.js
public/girlscouts/: index.html  script.js
public/randomimg/: index.html  script.js
scripts/: build.sh  build_html.rs  css.sh  redeploy.sh  update_modules.sh
src/: analytics.rs  app.rs  arg_parse.rs  assets.rs  color.rs  common.rs  config.rs  control.rs  ctrlc.rs  database.rs  files.rs  logger.rs  main.rs  middleware.rs  serve_static.rs  template.rs  writing.rs
src/components/: footer.rs  footer_rss.rs  header.rs  mod.rs
src/middleware/: cache_header.rs  mod.rs  onion.rs
src/routes/: article.rs  index.rs  key.rs  link.rs  mod.rs  randomimg.rs  writing.rs
src/sql/: create_article_likes.sql  create_article_views.sql
src/writing/: article.rs  mod.rs  writing.rs  writing_cache.rs
web/: const.cfg
web/components/: header.html
web/scss/: _common.scss  colornamegen.scss  contact.scss  index.scss  randomimg.scss  writing.scss
web/static/: humans.txt  index.js  sw.js
web/template/: error.html  files.html  index.html  not_found.html  writing-home.html  writing.html
(+274 files in other folders)
