[package]
name = "connorcode"
version = "6.0.4"
edition = "2021"

[dependencies]
# My Crates :P
# afire = { git = "https://github.com/Basicprogrammer10/afire.git", branch = "dev", features = ["serve_static", "logging", "tracing"] }
afire = { version = "1.2.0", features = ["extensions", "tracing"] }
simple_config_parser = "1.0.0"

# (En / De)codeing
rusqlite = { version = "0.26.0", features = ["bundled"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"
bincode = "1.3.3"
comrak = "0.12.1"

# Hashing
sha2 = "0.10.2"

# Other
lazy_static = "1.4.0"
sys-info = "0.9.1"
unindent = "0.1.7"
chrono = "0.4.19"
regex = "1.5.4"
ureq = "2.3.0"
rand = "0.8.4"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
parking_lot = "0.12.1"

[features]
default = [
  "tracing"
]

tracing = []
