[package]
edition = "2021"
name = "connorcode"
version = "7.0.0"

[workspace]
members = ["builder"]

[dependencies]
# My Crates :P
afire = { git = "https://github.com/basicprogrammer10/afire", branch = "dev", features = [
    "extensions",
    "tracing",
] }
afire_integration = { git = "https://github.com/Basicprogrammer10/chalk" }
simple_config_parser = "1.0.0"

bincode = "1.3.3"
# comrak = { git = "https://github.com/Sigma-8214/comrak" }
rusqlite = { version = "0.29.0" }                      #features = ["bundled"]} 
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
ahash = "0.8.3"
chrono = "0.4.24"
ctrlc = "3.2.5"
imagesize = "0.11.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
regex = "1.7.3"
sha2 = "0.10.6"
sys-info = "0.9.1"
unindent = "0.2.1"
ureq = "2.6.2"
urlencoding = "2.1.2"
comrak = "0.18.0"
